Final Fix to overflow; Change bg color

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -23,7 +23,7 @@ html, body, .global-grid {
 }
 
 .mainContent {
-    max-height: 66%;
+    max-height: 100%;
     overflow: scroll;
     align-self: start;
     .full-parent-height-and-width();
